--- a/npcs/Claideighm_Hot_Pants_Battleweave.yaml
+++ b/npcs/Claideighm_Hot_Pants_Battleweave.yaml
@@ -215,8 +215,7 @@ npc:
     # Max length per occupation: ...
     #
     occupation:
-    - Prostitute
-    
+    - Sex Worker
 
     #
     # D & D classes (case insensitive):
@@ -298,7 +297,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -315,7 +313,6 @@ npc:
     - Undercommon
     - Duergar
     - Draconic
-
 
     #
     # Factions:
@@ -338,7 +335,6 @@ npc:
     - id: N/A
       name: N/A
       role: Prostitute
-
 
     #
     # Adjectives or other tags that can be used for searching.
@@ -363,7 +359,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A slender dwarven woman in revealing leathers stretches in the umbra draping an alley.  "Bid thee a night of fun?"
+    introduction:  A slender dwarven woman in revealing leathers stretches in the umbra draping an alley.  /"Bid thee a night of fun?/"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -390,7 +386,10 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "I can make every night memorable"; "Ever seen through the dawn?"; "Imagine how many nights you've wasted without me"
+    expressions:  
+    - "I can make every night memorable"
+    - "Ever seen through the dawn?"
+    - "Imagine how many nights you've wasted without me"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -414,7 +413,7 @@ npc:
     #
     motivations: |
       They seek to expose the connection between magistrates and the sex slave trade
-      
+
     #
     # Passions:
     #
@@ -423,7 +422,7 @@ npc:
     #
     passions: |
       Sex. Working-class people. Sunrises
-      
+
     #
     # Vulnerabilities:
     #
@@ -432,7 +431,7 @@ npc:
     #
     vulnerabilities: |
       Anything to do with sex or politics will provoke Claideighm's fervor, either good or bad
-      
+
     #
     # Secrets:
     #
@@ -440,8 +439,7 @@ npc:
     # ???Maximum length???
     #
     secrets: They are a warlock whose patron is a Forgotten God who has charged them with a life of hedonism
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -453,7 +451,7 @@ npc:
     str: 9
     dex: 13
     con: 14
-    int: 12 
+    int: 12
     wis: 14
     cha: 19
 
@@ -466,46 +464,46 @@ npc:
   #
   specialties:
     skills:
-   - - Duergar Abilities:
-       - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
-       - Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
-       - Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
-       - Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
-       - Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
-    
-   - - Warlock Traits: Pact of the Hexblade: 
-       - Cantrips: Eldritch Blast, Toll The Dead 
-       - 1st Level: Charm Person, Hex
-       - 2nd Level: Crown of Madness, Enthrall
-       - Eldritch Invocations: 
-         - Rebuke of the Talisman: When the wearer of your talisman is hit by an attacker you can see within 30 feet of you, you can use your reaction to deal psychic damage to the attacker equal to your proficiency bonus 
+    - Duergar Abilities:
+      - Superior Darkvision: See 120 in like bright light in dim light and like dim light in darkness
+        Duergar Resilience: Advantage on saving throws against illusions and phantasms and against being charmed, paralyzed, and poisoned with alchemical poisons
+        Sunlight Sensitivity: disadvantage on attack and perception roles in direct sunlight
+        Duergar Magic: Can cast Enlarge and Invisibility once per long rest with intelligence as spellcasting ability
+        Duergar Weapons Training: Proficient with Battleaxe, Handaxe, Light Hammer and Warhammer
+      Warlock Traits: 
+      - Pact of the Hexblade: 
+        - Cantrips: Eldritch Blast, Toll The Dead 
+          1st Level: Charm Person, Hex
+          2nd Level: Crown of Madness, Enthrall
+        Eldritch Invocations: 
+        - Rebuke of the Talisman: When the wearer of your talisman is hit by an attacker you can see within 30 feet of you, you can use your reaction to deal psychic damage to the attacker equal to your proficiency bonus
                                   and push it up to 10 feet away from the talisman's wearer
-         - Maddening Hex: As a bonus action, you cause a psychic disturbance around the target cursed by your Hex spell or by a warlock feature of yours, such as Hexblade’s Curse and Sign of Ill Omen. When you do so, you deal 
-                         psychic damage to the cursed target and each creature of your choice within 5 feet of it. The psychic damage equals your Charisma modifier (minimum of 1 damage). To use this invocation, you must be able 
-                         to see the cursed target, and it must be within 30 feet of you                                  
-    
-   - - The Raven Queen Abilities:
-       - Raven Queen Spells: Spell DC 14
-             1st Level: False Life, Sanctuary
-             2nd Level: Silence, Spiritual Weapon
-             3rd Level: Feign Death, Speak with Dead     
-       - Sentinel Raven: you gain the service of a spirit sent by the Raven Queen to watch over you. The spirit assumes the form and game statistics of a raven, and it always obeys your commands, which you can give 
-                         telepathically while it is within 100 feet of you. While the raven is perched on your shoulder, you gain darkvision with a range of 30 feet and a bonus to your passive Wisdom (Perception) score and to 
-                         Wisdom (Perception) checks. The bonus equals your Charisma modifier. While perched on your shoulder, the raven can’t be targeted by any attack or other harmful effect; only you can cast spells on it; it 
-                         can’t take damage; and it is incapacitated. You can see through the raven’s eyes and hear what it hears while it is within 100 feet of you. In combat, you roll initiative for the raven and control how it
-                         acts. If it is slain by a creature, you gain advantage on all attack rolls against the killer for the next 24 hours. The raven doesn’t require sleep. While it is within 100 feet of you, it can awaken you
-                         from sleep as a bonus action. The raven vanishes when it dies, if you die, or if the two of you are separated by more than 5 miles. At the end of a short or long rest, you can call the raven back to you,
-                         no matter where it is or whether it died—and it reappears within 5 feet of you.       
+          Maddening Hex: As a bonus action, you cause a psychic disturbance around the target cursed by your Hex spell or by a warlock feature of yours, such as Hexblade’s Curse and Sign of Ill Omen. When you do so, you deal
+                         psychic damage to the cursed target and each creature of your choice within 5 feet of it. The psychic damage equals your Charisma modifier (minimum of 1 damage). To use this invocation, you must be able
+                         to see the cursed target, and it must be within 30 feet of you
+      The Raven Queen Abilities:
+      - Raven Queen Spells: 
+        - Description: Spell DC 14
+          1st Level: False Life, Sanctuary
+          2nd Level: Silence, Spiritual Weapon
+          3rd Level: Feign Death, Speak with Dead     
+        Sentinel Raven: you gain the service of a spirit sent by the Raven Queen to watch over you. The spirit assumes the form and game statistics of a raven, and it always obeys your commands, which you can give
+                        telepathically while it is within 100 feet of you. While the raven is perched on your shoulder, you gain darkvision with a range of 30 feet and a bonus to your passive Wisdom (Perception) score and to 
+                        Wisdom (Perception) checks. The bonus equals your Charisma modifier. While perched on your shoulder, the raven can’t be targeted by any attack or other harmful effect; only you can cast spells on it; it
+                        can’t take damage; and it is incapacitated. You can see through the raven’s eyes and hear what it hears while it is within 100 feet of you. In combat, you roll initiative for the raven and control how it
+                        acts. If it is slain by a creature, you gain advantage on all attack rolls against the killer for the next 24 hours. The raven doesn’t require sleep. While it is within 100 feet of you, it can awaken you
+                        from sleep as a bonus action. The raven vanishes when it dies, if you die, or if the two of you are separated by more than 5 miles. At the end of a short or long rest, you can call the raven back to you,
+                        no matter where it is or whether it died—and it reappears within 5 feet of you.
 
     special-abilities:
     - Proficiencies: Persuasion, Sleight of Hand    
     attacks: |
-      1 Attacks with her spells
+      1 Attacks with their spells
     combat-tactics: |
-      Claideighm will use enchantments to gain advantage in most situations, especially combat, charming others. Another way that she attracts such a high volume of customers.
+      Claideighm will use enchantments to gain advantage in most situations, especially combat, charming others. Another way that they attract such a high volume of customers.
     special-equipment:
-    - Pants of Charming: Claideighm has numerous pairs of these paints etched with magical runes. They have 3 charges. While wearing them she can expend 1 charge as an action to cast the charm person spell (save DC 13) on a 
-                         humanoid within 30 feet of her provided that her and the target can see each other. The pants regain all expended charges daily at dawn.
+    - Pants of Charming: Claideighm has numerous pairs of these paints etched with magical runes. They have 3 charges. While wearing them they can expend 1 charge as an action to cast the charm person spell (save DC 13) on a 
+                         humanoid within 30 feet of them provided that them and the target can see each other. The pants regain all expended charges daily at dawn.
                                                                    
   profile:
 
@@ -539,32 +537,4 @@ npc:
     #
     personality: |
       A well-build dwarven woman wearing suggestive leathers and with blue etching. Brown curls tumble to her shoulders
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
