--- a/npcs/corbrin_thulebard.yaml
+++ b/npcs/corbrin_thulebard.yaml
@@ -298,7 +298,6 @@ npc:
     tendencies:
     - N/A
 
-
     #
     # Languages the character speaks
     # (human, dwarvish, etc).
@@ -314,7 +313,6 @@ npc:
     - Common
     - Elvish
     - Dwarvish
-
 
     #
     # Factions:
@@ -339,7 +337,6 @@ npc:
     - id: adventurer_s_guild
       name: Adventurer's Guild
 
-
     #
     # Adjectives or other tags that can be used for searching.
     #
@@ -363,7 +360,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    introduction:  A Gruff weathered-looking, one-armed dwarf stands behind the counter of the armory. "What kin Ah do ya for, citizen?"
+    introduction:  A Gruff weathered-looking, one-armed dwarf stands behind the counter of the armory. /"What kin Ah do ya for, citizen?/"
 
     #
     # Appearance: a brief description of the character skin, clothes, hair, eyes, etc.
@@ -390,7 +387,9 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    expressions:  "We offer the sharpest steel in the land". "We do do custom work, but it'll cost ya"
+    expressions:  
+    - "We offer the sharpest steel in the land"
+    - "We do do custom work, but it'll cost ya"
 
     #
     # Mannerisms: what does the character do with their hands?  And eyes, mouth, etc.
@@ -403,7 +402,7 @@ npc:
     # Use this as a template:
     #             |----------------------------------------------------------------------------------------------------------------------|
     #
-    mannerisms:   Rubs the stump of his arm and strokes his beard
+    mannerisms: Rubs the stump of his arm and strokes his beard
 
   acting:
     #
@@ -414,7 +413,7 @@ npc:
     #
     motivations: |
       To peacefully live out his retirement stress free, make some money, and sell some fine arms and armor
-      
+
     #
     # Passions:
     #
@@ -423,7 +422,7 @@ npc:
     #
     passions: |
       Stories of lore and battle
-      
+
     #
     # Vulnerabilities:
     #
@@ -432,7 +431,7 @@ npc:
     #
     vulnerabilities: |
       Insecurity about his missing arm. He feels old and tired beyond his years
-      
+
     #
     # Secrets:
     #
@@ -440,8 +439,7 @@ npc:
     # ???Maximum length???
     #
     secrets: knows who's been buying what
-       
-      
+
   #
   # The D & D stats block:
   # All integers.
@@ -453,7 +451,7 @@ npc:
     str: 18
     dex: 11
     con: 14
-    int: 13 
+    int: 13
     wis: 16
     cha: 12
 
@@ -466,32 +464,31 @@ npc:
   #
   specialties:
     skills:
-   - - Dwarf Abilities:
-       - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.   
-       - Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
-       - Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
-       - Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
-                       instead of his normal Proficiency Bonus 
-
-   - - Fighter Abilities:
-       - Fighting Style: Great Weapon Fighting
-       - Second Wind: Bonus Action to regain 1d10 + 5
-       - Action Surge: Once every short/long rest can take an extra action
-       - Extra Attack: Can attack twice each turn
-
-   - - Echo Knight Abilities:
-       - Manifest Echo: can use a bonus action to magically manifest an echo of yourself in an unoccupied space you can see within 15 feet of you. This echo is a magical, translucent, gray image of you that lasts until it 
-                        is destroyed, until you dismiss it as a bonus action, until you manifest another echo, or until you're incapacitated. Your echo has AC 14 + your proficiency bonus, 1 hit point, and immunity to all 
-                        conditions. If it has to make a saving throw, it uses your saving throw bonus for the roll. It is the same size as you, and it occupies its space. On your turn, you can mentally command the echo to 
-                        move up to 30 feet in any direction (no action required). If your echo is ever more than 30 feet from you at the end of your turn, it is destroyed.
-                        - As a bonus action, you can teleport, magically swapping places with your echo at a cost of 15 feet of your movement, regardless of the distance between the two of you
-                        - When you take the Attack action on your turn, any attack you make with that action can originate from your space or the echo's space. You make this choice for each attack
-                        - When a creature that you can see within 5 feet of your echo moves at least 5 feet away from it, you can use your reaction to make an opportunity attack against that creature as if you were in the 
-                          echo's space
-       - Unleash Incarnation: Whenever you take the Attack action, you can make one additional melee attack from the echo's position. You can use this feature a number of times equal to your Constitution modifier (a minimum 
-                              of once). You regain all expended uses when you finish a long rest.
-       - Echo Avatar:  As an action, you can see through your echo's eyes and hear through its ears. During this time, you are deafened and blinded. You can sustain this effect for up to 10 minutes, and you can end it at any 
-                       time (requires no action). While your echo is being used in this way, it can be up to 1,000 feet away from you without being destroyed.       
+    - Dwarf Abilities:
+      - Darkvision: Can see in dim light within 60 feet as if it were bright light, and in Darkness as if it were dim light. Can’t discern color in Darkness, only Shades of Gray.   
+        Dwarven Resistance: Has advantage on Saving Throws against poison, and has Resistance against poison damage           
+        Dwarven Combat Training: Has proficiency with the Battleaxe, Handaxe, Light Hammer, and Warhammer.
+        Stonecunning: Whenever making an Intelligence (History) check related to the Origin of stonework, he is considered proficient in the History skill and adds double his Proficiency Bonus to the check, 
+                      instead of his normal Proficiency Bonus 
+      Fighter Abilities:
+      - Fighting Style: Great Weapon Fighting
+        Second Wind: Bonus Action to regain 1d10 + 5
+        Action Surge: Once every short/long rest can take an extra action
+        Extra Attack: Can attack twice each turn
+      Echo Knight Abilities:
+      - Manifest Echo: 
+        - Description: can use a bonus action to magically manifest an echo of yourself in an unoccupied space you can see within 15 feet of you. This echo is a magical, translucent, gray image of you that lasts until it 
+                       is destroyed, until you dismiss it as a bonus action, until you manifest another echo, or until you're incapacitated. Your echo has AC 14 + your proficiency bonus, 1 hit point, and immunity to all 
+                       conditions. If it has to make a saving throw, it uses your saving throw bonus for the roll. It is the same size as you, and it occupies its space. On your turn, you can mentally command the echo to 
+                       move up to 30 feet in any direction (no action required). If your echo is ever more than 30 feet from you at the end of your turn, it is destroyed.
+          Additional Information:
+          - As a bonus action, you can teleport, magically swapping places with your echo at a cost of 15 feet of your movement, regardless of the distance between the two of you                        - When you take the Attack action on your turn, any attack you make with that action can originate from your space or the echo's space. You make this choice for each attack
+          - When a creature that you can see within 5 feet of your echo moves at least 5 feet away from it, you can use your reaction to make an opportunity attack against that creature as if you were in the 
+            echo's space
+        Unleash Incarnation: Whenever you take the Attack action, you can make one additional melee attack from the echo's position. You can use this feature a number of times equal to your Constitution modifier (a minimum 
+                             of once). You regain all expended uses when you finish a long rest.
+        Echo Avatar:  As an action, you can see through your echo's eyes and hear through its ears. During this time, you are deafened and blinded. You can sustain this effect for up to 10 minutes, and you can end it at any 
+                      time (requires no action). While your echo is being used in this way, it can be up to 1,000 feet away from you without being destroyed.       
 
     special-abilities:
     - Proficiencies: Persuasion; Survival; Perception; Insight; Arcana; History;    
@@ -517,7 +514,6 @@ npc:
       recruits. Eventually he decided it was time to retire from service and live quiet and stress-free for the rest of his life. To that end, he took a job working for an old friend of his, selling arms and armor from his 
       provisions shop. He is knowledgeable and friendly despite his appearance and enjoys imparting his knowledge on anyone willing to listen.
 
-      
     #
     # Personality (or something like that):
     # Expand on the introduction, appearance, expressions, mannerisms, etc.
@@ -529,32 +525,4 @@ npc:
     personality: |
       Weathered, scarred, broad, stout and missing his left arm. A long graying beard and braided gray hair in leather armor. He's tired and can't wait to have enough money to retire. He knows his job inside and out and takes 
       pride in his work. He still feels ashamed and frustrated by the loss of his arm
-  #
-  # Content that does not get displayed, but could be useful
-  # to humans.  Includes review comments, notes about what to
-  # do for the NPC art, or whatever else we need.
-  #
-  # Optional.
-  #
-  uncategorized:
-  - uncategorized_template_1: TEMPLATE
-  - uncategorized_template_2: |
-    TEMPLATE
-    MORE TEMPLATE
-  - uncategorized_template_3: TEMPLATE
----
-
-#
-# ...Multiple NPCs can be included in one file,
-# separated by --- dividers...
-#
-© 2021 GitHub, Inc.
-Terms
-Privacy
-Security
-Status
-Docs
-Contact GitHub
-Pricing
-API
-Training
+  
